navbar e imagen de home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div fxLayout="column" fxFill class="contenedor">
+    <div class="container-image">
+        <img src="assets/imagenes/Home.jpg" alt="Planta" width="100%" height="360px"> 
+    </div>
+    <div></div>
+</div>
