--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,16 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100" class="container">
-<div>logo</div>
-<div>menu</div>
+<div><img src="" alt="Logo"></div>
+<div fxLayout="row" fxLayoutGap="20">
+    <a>Home</a>
+    <a>Quíenes Somos</a>
+    <a>Normatividad</a>
+    <a>Eventos</a>
+    <a>Trámites</a>
+    <a>Productos y Servicios</a>
+    <a>Aliados y Convenios</a>
+    <a>Comités</a>
+</div>
+<div>
+    <a>Iniciar Sesión</a>
+</div>
 </div>
