--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 .container{
-    color:black;
+    color:white;
     padding: 30px;
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
+    background: brown;
 }
