--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,10 @@
+ 
+@import '../../myColor.scss';
+
 .container{
     color:white;
     padding: 30px;
     font-size: 16px;
     /* font-weight: bold; */
-    background: brown;
+    background: primary;
 }
