--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100" class="container">
 <div><img src="" alt="Logo"></div>
 <div fxLayout="row" fxLayoutGap="20">
-    <a>Home</a>
-    <a>Quíenes Somos</a>
-    <a>Normatividad</a>
-    <a>Eventos</a>
-    <a>Trámites</a>
-    <a>Productos y Servicios</a>
-    <a>Aliados y Convenios</a>
-    <a>Comités</a>
+    <button routerLink="/" mat-button>Home</button>
+    <button mat-button>Quíenes Somos</button>
+    <button mat-button>Normatividad</button>
+    <button mat-button>Eventos</button>
+    <button mat-button>Trámites</button>
+    <button mat-button>Productos y Servicios</button>
+    <button mat-button>Aliados y Convenios</button>
+    <button mat-button>Comités</button>
 </div>
 <div>
-    <a>Iniciar Sesión</a>
+    <button routerLink="/login" mat-raised-button color="primary">Iniciar Sesión</button>
 </div>
 </div>
