--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,6 +11,6 @@
     <button mat-button>Comités</button>
 </div>
 <div>
-    <button routerLink="/login" mat-raised-button color="primary">Iniciar Sesión</button>
+    <button routerLink="auth/login" mat-raised-button color="primary">Iniciar Sesión</button>
 </div>
 </div>
