firebase con roles, inicio de sesion y registro de correos

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,19 +1,27 @@
-<div class="register" fxFill>
-  <form class="custom-form" method="post">
-    <h1>Register</h1>
-    <input type="email" name="email" placeholder="Email" required="required" />
-    <input
-      type="password"
-      name="password"
-      placeholder="Password"
-      required="required"
-    />
-    <input
-      type="password"
-      name="password"
-      placeholder="Repeat the password"
-      required="required"
-    />
-    <button type="submit" (click)="register()">Register</button>
+
+<div fxLayoutAlign="center stretch">
+  <form class="custom-form" [formGroup]="form" fxLayout="row wrap" fxLayoutAlign="center center">
+    <mat-form-field class="form-control" fxFlex="100">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email" type="text" required />
+      <mat-error *ngIf="this.form.get('email')?.hasError('required')">
+        Email is required
+      </mat-error>
+      <mat-error *ngIf="this.form.get('email')?.hasError('email')">
+        Email isn't valid. Please enter a valid email.
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="form-control" fxFlex="100">
+      <mat-label>Password</mat-label>
+      <input matInput formControlName="password" type="password" required />
+      <mat-error *ngIf="this.form.get('password')?.hasError('required')">
+        Password is required
+      </mat-error>
+    </mat-form-field>
+    <div class="form-footer" fxFlex="100" fxLayoutAlign="center center">
+      <button [disabled]="form.invalid || loading"  mat-raised-button color="primary" type="submit" (click)="register()">
+        Enviar
+      </button>
+    </div>
   </form>
-</div>
+  </div>
