--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,13 @@
-<div fxLayout="column" fxFill class="contenedor">
-    <div class="container-image">
-        <img src="assets/imagenes/Home.jpg" alt="Planta" width="100%" height="360px"> 
-    </div>
-    <div></div>
+<div fxLayout="column" fxFill>
+    <div fxLayout="column" class="contenedor">
+        <div class="container-image">
+          <img
+            src="assets/imagenes/Home.jpg"
+            alt="Planta"
+            width="100%"
+            height="360px"
+          />
+        </div>
+        <div></div>
+      </div>
 </div>
