--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div fxFill fxLayout="column">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
