--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100" class="container">
+<div fxLayout="row" fxLayoutAlign="space-evenly center" fxFlex="100" class="container">
 <div><img src="" alt="Logo"></div>
-<div fxLayout="row" fxLayoutGap="20">
+<div fxLayout="row">
     <button routerLink="/" mat-button>Home</button>
     <button mat-button>Quíenes Somos</button>
     <button mat-button>Normatividad</button>
