--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -3,7 +3,8 @@
 
 .container{
     color:black;
-    padding: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 16px;
     font-weight: 500px; 
 }
