--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,16 +10,10 @@
     class="container"
   >
     <div fxLayoutAlign="center center">
-      <!-- <img
-        src="//img1.wsimg.com/isteam/ip/5844290a-edf7-47ed-a69e-b07e3c93f6a4/Logo%20Red%20Seg%20Calderas.jpg/:/"
-        class="logo"
-        width="400"
-        height="80"
-      /> -->
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Logo.jfif?alt=media&token=19ce4a2d-225d-4862-9dce-8b5fae6274ae"
         class="logo"
-        width="400"
+        width.xs="400"
         height="80">
       
     </div>
