--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,97 @@
-<div fxLayout="column" fxFill>
-    <div fxLayout="column" class="contenedor">
-        <div class="container-image">
-          <img
-            src="assets/imagenes/Home.jpg"
-            alt="Planta"
-            width="100%"
-            height="360px"
-          />
-        </div>
-        <div></div>
+<section fxLayout="column">
+  <div fxLayout="column" class="contenedor">
+    <div class="container-image">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/home.jpg?alt=media&token=3e33482d-2e59-499e-9ee2-4f7e5ac00a18"
+        alt="Planta"
+        width="100%"
+        height="360px"
+      />
+    </div>
+    <div></div>
+  </div>
+</section>
+<section fxLayout="column">
+  <div fxLayout="row" fxLayoutGap="20">
+    <div fxFlex="50">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/quienes%20somos.jpg?alt=media&token=5818fbd0-be52-4933-94f8-bb93283bc176"
+        alt=""
+        width="100%"
+      />
+    </div>
+    <div fxFlex="50" fxLayoutAlign="center center" fxLayout="column">
+      <h1>¿Quienes Somos?</h1>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
+        quam eius, repellendus nisi et maiores error delectus atque soluta
+        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
+        rerum deserunt?
       </div>
-</div>
+      <br />
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus
+        itaque. Aperiam vitae facilis libero similique dolorum officia harum
+        aliquam enim? Repellat tempora alias ea ratione aliquam sapiente,
+        suscipit voluptate.
+      </div>
+      <br />
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+        obcaecati velit veniam totam numquam molestias sed laborum nostrum
+        perferendis eligendi iure saepe sapiente nulla inventore similique qui
+        ipsa, dolore quos.
+      </div>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutGap="20">
+    <div fxFlex="50" fxLayoutAlign="center center" fxLayout="column">
+      <h1>Misión</h1>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
+        quam eius, repellendus nisi et maiores error delectus atque soluta
+        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
+        rerum deserunt?
+      </div>
+    </div>
+    <div fxFlex="50">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/misi%C3%B3n.jpg?alt=media&token=e8355509-77bb-4a48-89d8-325e604d5971"
+        alt=""
+        width="100%"
+      />
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutGap="20">
+    <div fxFlex="50">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/visi%C3%B3n.jpg?alt=media&token=75919ff1-277b-4109-9245-813388b54199"
+        alt=""
+        width="100%"
+      />
+    </div>
+    <div fxFlex="50" fxLayoutAlign="center center" fxLayout="column">
+      <h1>Visión</h1>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
+        quam eius, repellendus nisi et maiores error delectus atque soluta
+        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
+        rerum deserunt?
+      </div>
+      <br />
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus
+        itaque. Aperiam vitae facilis libero similique dolorum officia harum
+        aliquam enim? Repellat tempora alias ea ratione aliquam sapiente,
+        suscipit voluptate.
+      </div>
+      <br />
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+        obcaecati velit veniam totam numquam molestias sed laborum nostrum
+        perferendis eligendi iure saepe sapiente nulla inventore similique qui
+        ipsa, dolore quos.
+      </div>
+    </div>
+  </div>
+</section>
