--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+h2,h1{
+    color:  #7D1838;
+}
