--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,21 +1,35 @@
 
 <div fxLayoutAlign="center stretch">
-  <form class="custom-form" [formGroup]="form" fxLayout="row wrap" fxLayoutAlign="center center">
-    <mat-form-field class="form-control" fxFlex="100">
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email" type="text" required />
-      <mat-error *ngIf="this.form.get('email')?.hasError('required')">
-        Email is required
+  <form class="custom-form" [formGroup]="form" fxLayout="row wrap" fxLayoutAlign="space-between center">
+    <mat-form-field class="form-control" fxFlex="40" fxFlex.xs="100">
+      <mat-label>Nombres</mat-label>
+      <input matInput formControlName="name" type="text" required />
+      <mat-error *ngIf="this.form.get('name')?.hasError('required')">
+        Nombre es requerido
       </mat-error>
-      <mat-error *ngIf="this.form.get('email')?.hasError('email')">
-        Email isn't valid. Please enter a valid email.
+    </mat-form-field>
+    <mat-form-field class="form-control" fxFlex="40" fxFlex.xs="100">
+      <mat-label>Apellidos</mat-label>
+      <input matInput formControlName="lastName" type="text" required />
+      <mat-error *ngIf="this.form.get('lastName')?.hasError('required')">
+        Apellidos es requerido
       </mat-error>
     </mat-form-field>
     <mat-form-field class="form-control" fxFlex="100">
-      <mat-label>Password</mat-label>
+      <mat-label>Correo</mat-label>
+      <input matInput formControlName="email" type="text" required />
+      <mat-error *ngIf="this.form.get('email')?.hasError('required')">
+        Correo es requerido
+      </mat-error>
+      <mat-error *ngIf="this.form.get('email')?.hasError('email')">
+        Correo no valido, ingrese un correo valido.
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="form-control" fxFlex="100">
+      <mat-label>Contraseña</mat-label>
       <input matInput formControlName="password" type="password" required />
       <mat-error *ngIf="this.form.get('password')?.hasError('required')">
-        Password is required
+        Contraseña es requerido
       </mat-error>
     </mat-form-field>
     <div class="form-footer" fxFlex="100" fxLayoutAlign="center center">
