--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
       fxLayout="row"
       fxLayoutAlign="center center"
     >
-      <mat-icon aria-hidden="false" class="icon-warning">warning</mat-icon>
+      <mat-icon aria-hidden="false" color="accent" class="icon-warning">warning</mat-icon>
       {{ error_message }}
     </div>
 
