--- a/src/app/capacitaciones/feature-capacitacion/feature-capacitacion.component.html
+++ b/src/app/capacitaciones/feature-capacitacion/feature-capacitacion.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="column" fxLayoutGap="30" fxLayoutAlign="center center">
-  <h1>SERVICIOS</h1>
+<div fxLayout="column" fxLayoutGap="30" fxLayoutAlign="center center" style="margin-top: 20px;">
+  <h1>CAPACITACIONES Y EVENTOS</h1>
   <div
     fxLayoutAlign="end center"
     fxLayoutGap="20px"
@@ -22,7 +22,7 @@
   >
   </mat-progress-spinner>
   <div fxLayout="row" fxLayoutAlign="space-between start" fxFill>
-    <div fxLayout="column" fxLayoutgap="15" style="min-width: 80%">
+    <div fxLayout="column" style="min-width: 80%" fxLayoutGap="15">
       <div
         *ngFor="let item of capacitacionItem"
       >
