--- a/src/app/servicios/feature-servicios/feature-servicios.component.html
+++ b/src/app/servicios/feature-servicios/feature-servicios.component.html
@@ -5,7 +5,7 @@
       Agregar Servicio
     </button>
   </div>
-  <div *ngFor="let item of servicesItem" fxLayout="column" fxLayoutGap="20">
+  <div *ngFor="let item of servicesItem" fxLayout="column" fxLayoutGap="20" style="min-width: 100%;">
     <mat-card>
       <mat-card-content>
         <div
