--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,8 +6,50 @@
         alt="Planta"
         width="100%"
         height="360px"
+        style="filter: brightness(0.3)"
+      />
+      <h4 class="texto-encima">
+        La Red y sus miembros de forma individual asumen el compromiso de
+        mantener y dar a conocer los valores de diversidad, equidad e inclusión;
+        a través de mensajes escritos o verbales para favorecer el acceso
+        equitativo a sus programas, actividades, grupos de trabajo, comités
+        técnicos, contratos y tareas propias de la Red.
+      </h4>
+    </div>
+    <div fxLayoutAlign="center center">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/membresia.png?alt=media&token=e2fbb978-7424-4605-b0c2-1d491a467c5b"
+        alt="Membresia"
+        width="80%"
       />
     </div>
-    <div></div>
+    <div>
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/derechosRed.png?alt=media&token=4006e51a-358f-40a2-abcd-fe3c593243cc"
+        alt="derechos red"
+        width="100%"
+      />
+    </div>
+    <div>
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/obligacionesRed.png?alt=media&token=2a892b95-f1de-4309-84d0-2de712177517"
+        alt="Obligaciones red"
+        width="100%"
+      />
+    </div>
+    <div fxLayoutAlign="center center">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/requisitosRED.png?alt=media&token=06bb098b-81a3-4bc6-acae-eaaa06bd5911"
+        alt="Requisitos RED"
+        width="80%"
+      />
+    </div>
+    <div fxLayoutAlign="center center">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/tiposMienbros.png?alt=media&token=892e0cd3-ef30-473c-9687-01f2efcc9fa6"
+        alt="Tipos de miembros"
+        width="80%"
+      />
+    </div>
   </div>
 </section>
