--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -147,8 +147,8 @@
           <button mat-button routerLink="/quienes-somos">QUIENES SOMOS</button>
           <button mat-button routerLink="/servicios">SERVICIOS</button>
           <button mat-button routerLink="/capacitaciones">CAPACITACIONES</button>
-          <button mat-button>NORMATIVIDAD</button>
-          <button mat-button>COMITES</button>
+          <button mat-button routerLink="/normatividad">NORMATIVIDAD</button>
+          <!-- <button mat-button>COMITES</button> -->
           <button mat-button>CONTACTANOS</button>
         </div>
       </div>
