--- a/src/app/quienes-somos/feature-somos/feature-somos.component.html
+++ b/src/app/quienes-somos/feature-somos/feature-somos.component.html
@@ -1,4 +1,11 @@
 <div fxLayout="column" fxFill>
+  <div>
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/objetivosRed.png?alt=media&token=3b4d44d8-d20a-49a8-9f11-a4c867e8c5ac"
+      alt="Objetivos de la red"
+      width="100%"
+    />
+  </div>
   <div fxLayout="row" fxLayoutGap="20" fxLayout.xs="column" fxLayoutGap.xs="10">
     <div fxFlex="50" fxFlex.xs="100">
       <img
