--- a/src/app/capacitaciones/ui/upload-capacitacion/upload-capacitacion.component.html
+++ b/src/app/capacitaciones/ui/upload-capacitacion/upload-capacitacion.component.html
@@ -1,22 +1,62 @@
 <div fxLayout="column" fxFill fxLayoutAlign="center center" fxLayoutGap="20">
   <div fxLayout="row">AGREGAR NUEVO SERVICIO</div>
   <form [formGroup]="formulario" fxLayout="column" fxLayoutGap="10">
-    <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
+    
+    <mat-form-field fxFlex="100" fxFlex.xs="100">
+      <mat-label>Fecha de inicio</mat-label>
       <input
         matInput
-        placeholder="Ingrese nombre del servicio"
+        formControlName="fecha"
+        [min]="fechaActual"
+        (focus)="fechaInicio.open()"
+        [matDatepicker]="fechaInicio"
+        (dateChange)="cambiarFechaMin($event.value)"
+        readonly
+      />
+      <mat-datepicker-toggle matPrefix [for]="fechaInicio">
+        <mat-icon matDatepickerToggleIcon>calendar_month</mat-icon>
+      </mat-datepicker-toggle>
+      <mat-datepicker #fechaInicio></mat-datepicker>
+      <tooltip
+        matSuffix
+        texto="Fecha inicio del tratamiento enviado por el responsable del adulto mayor."
+      ></tooltip>
+      <mat-error *ngIf="formulario.get('fecha')?.invalid">
+        {{ errorFormulario('fecha') }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Título</mat-label>
+      <input
+        matInput
+        placeholder="Ingrese nombre de la capacitación"
         formControlName="title"
       />
+      <mat-error *ngIf="formulario.get('title')?.invalid">
+        {{ errorFormulario('title') }}
+      </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
+      <mat-label>Descripción</mat-label>
 
       <textarea
         matInput
-        placeholder="Detalles del servicio"
+        placeholder="Detalles de la capacitación"
         formControlName="details"
       ></textarea>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Ingrese Link o lugar  de la capacitación</mat-label>
+      <input
+        matInput
+        placeholder="Ingrese Link o lugar  de la capacitación"
+        formControlName="link"
+      />
+      <mat-error *ngIf="formulario.get('link')?.invalid">
+        {{ errorFormulario('link') }}
+      </mat-error>
     </mat-form-field>
 
     <div fxLayout="column" fxLayoutGap="10">
